# 1c_checkers_task

./: CMakeLists.txt  README.md  main.cpp
src/Game/: Game.cpp  Game.h
src/GameBot/: GameBot.cpp  GameBot.h
src/Payload/: Board.cpp  Board.h  Turn.cpp  Turn.h
src/Tools/: IO.cpp  IO.h  Tools.cpp  Tools.h
